--- a/index.html
+++ b/index.html
@@ -618,6 +618,7 @@
       </div>
     </section>
 
+    <!-- counter service  -->
     <section
       class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb"
       id="about-section"
@@ -675,6 +676,7 @@
       </div>
     </section>
 
+    <!-- staff section  -->
     <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center pb-5">
@@ -820,6 +822,7 @@
       </div>
     </section>
 
+    <!-- testimonial section  -->
     <section class="ftco-section testimony-section" id="testimony-section">
       <div class="container">
         <div class="row justify-content-center pb-3">
@@ -846,9 +849,10 @@
                   </div>
                   <div class="text px-4 pb-5">
                     <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Animi atque ipsa in fugiat blanditiis, eum voluptate
+                      necessitatibus fuga. Odio ipsa odit modi veritatis
+                      perferendis rem autem earum nihil reiciendis dolorem!
                     </p>
                     <p class="name">John Fox</p>
                     <span class="position">Businessman</span>
@@ -869,9 +873,10 @@
                   </div>
                   <div class="text px-4 pb-5">
                     <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Deserunt totam laborum, delectus placeat labore ea eaque
+                      nemo. Nisi porro maxime fugiat minus! Nemo a soluta eaque!
+                      Iure amet quae optio.
                     </p>
                     <p class="name">John Fox</p>
                     <span class="position">Businessman</span>
@@ -892,9 +897,10 @@
                   </div>
                   <div class="text px-4 pb-5">
                     <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Dolorem nam, in est hic molestiae vero maxime rem
+                      doloremque aspernatur inventore ducimus temporibus esse
+                      quibusdam illo, saepe dolore. Possimus, nostrum cum?
                     </p>
                     <p class="name">John Fox</p>
                     <span class="position">Businessman</span>
@@ -915,9 +921,10 @@
                   </div>
                   <div class="text px-4 pb-5">
                     <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Cum, quam dignissimos. Nesciunt blanditiis quod quam illum
+                      et, illo fugiat, rerum officiis suscipit eaque doloremque
+                      iste praesentium dolor, tempora eveniet voluptate.
                     </p>
                     <p class="name">John Fox</p>
                     <span class="position">Businessman</span>
@@ -938,9 +945,10 @@
                   </div>
                   <div class="text px-4 pb-5">
                     <p class="mb-4">
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts.
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Ut voluptatem, explicabo suscipit porro nulla consequuntur
+                      reiciendis, culpa rem impedit excepturi, enim qui adipisci
+                      voluptas ad vitae iusto. Quod, similique nemo!
                     </p>
                     <p class="name">John Fox</p>
                     <span class="position">Businessman</span>
@@ -953,6 +961,7 @@
       </div>
     </section>
 
+    <!-- blog section  -->
     <section class="ftco-section bg-light" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
@@ -1102,6 +1111,7 @@
       </div>
     </section>
 
+    <!-- contact section  -->
     <section
       class="ftco-section contact-section ftco-no-pb"
       id="contact-section"
@@ -1126,7 +1136,7 @@
                 <span class="icon-map-signs"></span>
               </div>
               <h3 class="mb-4">Address</h3>
-              <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+              <p>112 Cao Thang, District 3, Ho Chi Minh City</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -1218,6 +1228,7 @@
       </div>
     </section>
 
+    <!-- footer  -->
     <footer class="ftco-footer ftco-section">
       <div class="container">
         <div class="row mb-5">
